BID-365 Report is not received by the project owner when QA Engineer submit a Report

--- a/www/wp-content/themes/ProjectTheme (work)/style.css
+++ b/www/wp-content/themes/ProjectTheme (work)/style.css
@@ -4,7 +4,7 @@ Theme Name: ProjectTheme (work)
 
 Theme URI: http://sitemile.com/products/wordpress-project-freelancer-theme/
 
-Description: The only wordpress theme that allows you to build a project bidding, freelancer, or chores website from your wordpress blog. A turn-key solution for your business. Create a full featured outsourcing website in minutes. Last fixed bids: BID-465, BID-370
+Description: The only wordpress theme that allows you to build a project bidding, freelancer, or chores website from your wordpress blog. A turn-key solution for your business. Create a full featured outsourcing website in minutes. Last fixed bids: BID-465, BID-370, BID-365
 
 Author: SiteMile
 
