--- a/www/wp-content/themes/ProjectTheme (work)/style.css
+++ b/www/wp-content/themes/ProjectTheme (work)/style.css
@@ -1020,15 +1020,15 @@ li.browse-by-category-thumbs
 
   font-family: "FontAwesome";
 
-  src: url('../fonts/fontawesome-webfont.eot');
+  src: url('fonts/fontawesome-webfont.eot');
 
-  src: url('../fonts/fontawesome-webfont.eot?#iefix') format('eot'), 
+  src: url('fonts/fontawesome-webfont.eot?#iefix') format('eot'), 
 
-  url('../fonts/fontawesome-webfont.woff') format('woff'), 
+  url('fonts/fontawesome-webfont.woff') format('woff'), 
 
-  url('../fonts/fontawesome-webfont.ttf') format('truetype'), 
+  url('fonts/fontawesome-webfont.ttf') format('truetype'), 
 
-  url('../fonts/fontawesome-webfont.svg#FontAwesome') format('svg');
+  url('fonts/fontawesome-webfont.svg#FontAwesome') format('svg');
 
   font-weight: normal;
 
