BID-430 "Next Step" Button is too big when Project Owner creates a project.

--- a/www/wp-content/themes/ProjectTheme (work)/style.css
+++ b/www/wp-content/themes/ProjectTheme (work)/style.css
@@ -7190,7 +7190,7 @@ a.go_back_btn:link, a.go_back_btn:visited {
 
     border-radius: 5px;
 
-    width: 120px;
+    width: 130px;
 
 		font-size: 15px;
 
@@ -7201,6 +7201,8 @@ a.go_back_btn:link, a.go_back_btn:visited {
 		border-bottom: 3px solid #5AA01F;
 
 		text-transform: capitalize;
+                
+                text-align: center;
 
 		text-decoration: none;
 
