my commit 08/02/16 - BID-477, BID-477

--- a/www/wp-content/themes/ProjectTheme (work)/css/menu.css
+++ b/www/wp-content/themes/ProjectTheme (work)/css/menu.css
@@ -557,7 +557,8 @@
 	font-family: 'Open Sans', sans-serif;
 	font-size: 13px;
 	color: #fff;
-	background: #5AA01F;
+	/*background: #5AA01F;*/ 
+	background: #3CAADD;
 	text-decoration: none;
 	display: inline-block;
 }
